tests/vendor/valid/trivial/unary_negate.c
//expect 255
//tags: trivial, unary
int main() {
    return -1;
}
