tests/vendor/invalid/syntax/extern_label.c
//tags: goto
// The extern specifier cannot be applied to labels
int main() {
    extern a:
    return 1;
}